Export registration function

The registration function is referenced in the plugin, therefore it is
vital that the function is actually exported.
Finding a solution for not having to reference the function in the
plugin is left as an exercise for another day.

Fixes: QTBUG-94099
Change-Id: I8c379b6b596f2354122c9b8769dbb63a398c9298
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>